fix(Tasks): align time

--- a/src/components/Tasks/Tasks.styl
+++ b/src/components/Tasks/Tasks.styl
@@ -27,6 +27,5 @@
     text-decoration none
 
 .time
-  margin-right 5px
   margin-left auto
   padding-top 1px
